COSMETIC: Fixes to alignment of inline inputs and list delimiters.
Further tweaks following #594.

--- a/packages/frontend/src/model/object_list_editor.css
+++ b/packages/frontend/src/model/object_list_editor.css
@@ -1,6 +1,7 @@
 .object-list {
     display: flex;
     flex-direction: row;
+    align-items: center;
     list-style: none;
     padding: 0;
 
